Index update for public guidance

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -79,7 +79,10 @@ service-start{% extends "layout.html" %}
                         <a href="/guidance/full/v2/before-you-appeal">Before you appeal</a>
                       </li>
                       <li>
-                        <a href="/guidance/full/v2/how-to-appeal">How to appeal</a>
+                        <a href="/guidance/full/v2/submit-an-appeal">Submit an appeal</a>
+                      </li>
+                      <li>
+                        <a href="/guidance/full/v2/your-appeal-statement">Your appeal statement</a>
                       </li>
                       <li>
                         <a href="/guidance/full/v2/stages-of-an-appeal">The stages of an appeal</a>
