Changes to guidance screen order + hack for BYS > SAR

--- a/app/views/before-you-start/v10/enforcement-notice.html
+++ b/app/views/before-you-start/v10/enforcement-notice.html
@@ -53,9 +53,25 @@
           ]
         }) }}
 
-        {{ govukButton({
-          text: "Continue"
-        }) }}
+
+        <!-- hacky hijack of this green button -->
+        <!-- quick hack for the UR starting tomorrow -->
+        <!-- only relevant for full appeals -->
+
+        {% if data['saveDemo'] %}
+
+          {{ govukButton({
+            href: "/save-progress/v3/check-answers",
+            text: "Continue"
+          }) }}
+
+        {% else %}
+
+          {{ govukButton({
+            text: "Continue"
+          }) }}
+
+        {% endif %}
 
       </form>
 
