--- a/app/views/guidance/full/v2/before-you-appeal.html
+++ b/app/views/guidance/full/v2/before-you-appeal.html
@@ -19,7 +19,7 @@
     </ol>
   </div>
 
-  <main class="govuk-main-wrapper " id="main-content" role="main">
+  <main class="govuk-main-wrapper" id="main-content" role="main">
 
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
@@ -38,10 +38,10 @@
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active govuk-body-s govuk-!-margin-bottom-0" aria-current="true">Before you appeal
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                <a class="gem-c-contents-list__link govuk-link" href="submit-an-appeal"> Submit an appeal</a>
+                <a class="gem-c-contents-list__link govuk-link" href="your-appeal-statement">Your appeal statement</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                <a class="gem-c-contents-list__link govuk-link" href="your-appeal-statement">Your appeal statement</a>
+                <a class="gem-c-contents-list__link govuk-link" href="submit-an-appeal"> Submit an appeal</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="stages-of-an-appeal">The stages of an appeal</a>
@@ -199,7 +199,9 @@
           You should get legal advice if you think your appeal needs a public inquiry. A legal representative can help you plan who your witnesses will be. You should start planning this before you submit your appeal.
         </p>
 
-        <h2 class="govuk-heading-l pins-guidance-h2">Documents to prepare</h2>
+        <h2 class="govuk-heading-l pins-guidance-h2" id="documents-to-prepare">
+          Documents to prepare
+        </h2>
 
         <p class="govuk-body">
           You must submit certain documents with your appeal.
@@ -263,7 +265,7 @@
         </p>
 
         <p class="govuk-body">
-          Your draft should say what you think your local planning department will agree with you about. You can prepare this using the statement of common ground pro forma.
+          Your draft should say what you think your local planning department will agree with you about. You can prepare this using the <a href="https://www.gov.uk/government/publications/statement-of-common-ground" class="govuk-link">statement of common ground pro forma</a>.
         </p>
 
         <p class="govuk-body">
@@ -318,7 +320,7 @@
               </a>
             </li>
             <li class="gem-c-pagination__item gem-c-pagination__item--next">
-              <a href="submit-an-appeal" class="gem-c-pagination__link" rel="next">
+              <a href="your-appeal-statement" class="gem-c-pagination__link" rel="next">
                 <span class="gem-c-pagination__link-title">
                   <svg class="gem-c-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
                     <path d="m10.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"></path>
@@ -328,7 +330,7 @@
                   </span>
                 </span>
                   <span class="gem-c-pagination__link-divider visually-hidden">:</span>
-                  <span class="gem-c-pagination__link-label">Submit an appeal</span>
+                  <span class="gem-c-pagination__link-label">Your appeal statement</span>
               </a>
             </li>
 
