--- a/app/views/guidance/full/v2/claim-costs-for-your-appeal.html
+++ b/app/views/guidance/full/v2/claim-costs-for-your-appeal.html
@@ -36,13 +36,13 @@
                 <a class="gem-c-contents-list__link govuk-link" href="when-you-can-appeal"> When you can appeal</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                <a class="gem-c-contents-list__link govuk-link" href="before-you--appeal"> Before you appeal</a>
-              </li>
-              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                <a class="gem-c-contents-list__link govuk-link" href="submit-an-appeal">Submit an appeal</a>
+                <a class="gem-c-contents-list__link govuk-link" href="before-you-appeal"> Before you appeal</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="your-appeal-statement">Your appeal statement</a>
+              </li>
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+                <a class="gem-c-contents-list__link govuk-link" href="submit-an-appeal">Submit an appeal</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="stages-of-an-appeal">The stages of an appeal</a>
