--- a/app/views/guidance/full/v2/submit-an-appeal.html
+++ b/app/views/guidance/full/v2/submit-an-appeal.html
@@ -36,13 +36,13 @@
                 <a class="gem-c-contents-list__link govuk-link" href="when-you-can-appeal"> When you can appeal</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                <a class="gem-c-contents-list__link govuk-link" href="before-you--appeal"> Before you appeal</a>
-              </li>
-              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active govuk-body-s govuk-!-margin-bottom-0" aria-current="true">
-                Submit an appeal
+                <a class="gem-c-contents-list__link govuk-link" href="before-you-appeal"> Before you appeal</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="your-appeal-statement">Your appeal statement</a>
+              </li>
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active govuk-body-s govuk-!-margin-bottom-0" aria-current="true">
+                Submit an appeal
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="stages-of-an-appeal">The stages of an appeal</a>
@@ -95,7 +95,7 @@
         </ul>
 
         <p class="govuk-body">
-          Find out more about the <a href="#" class="govuk-link">documents you need to prepare.</a>.
+          Find out more about the <a href="before-you-appeal#documents-to-prepare" class="govuk-link">documents you need to prepare</a>.
         </p>
 
         <p class="govuk-body">
@@ -112,14 +112,14 @@
         </ul>
 
         <p class="govuk-body">
-          Find out more about <a href="#" class="govuk-link">what you should do before you appeal</a>.
+          Find out more about <a href="before-you-appeal" class="govuk-link">what you should do before you appeal</a>.
         </p>
 
         <p class="govuk-body">
           You must have an email address to use the online service.
         </p>
 
-        <a href="#" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+        <a href="/before-you-start/v10/" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
           Appeal now
           <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
             <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
@@ -153,7 +153,7 @@
           <ul class="gem-c-pagination__list" data-module="track-click">
 
             <li class="gem-c-pagination__item gem-c-pagination__item--previous">
-              <a href="before-you-appeal" class="gem-c-pagination__link" rel="prev">
+              <a href="your-appeal-statement" class="gem-c-pagination__link" rel="prev">
                 <span class="gem-c-pagination__link-title">
                   <svg class="gem-c-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
                     <path d="m6.5938-0.0078125-6.7266 6.7266 6.7441 6.4062 1.377-1.449-4.1856-3.9768h12.896v-2h-12.984l4.2931-4.293-1.414-1.414z"></path>
@@ -163,11 +163,11 @@
                   </span>
                 </span>
                   <span class="gem-c-pagination__link-divider visually-hidden">:</span>
-                  <span class="gem-c-pagination__link-label">Before you appeal</span>
+                  <span class="gem-c-pagination__link-label">Your appeal statement</span>
               </a>
             </li>
             <li class="gem-c-pagination__item gem-c-pagination__item--next">
-              <a href="your-appeal-statement" class="gem-c-pagination__link" rel="next">
+              <a href="stages-of-an-appeal" class="gem-c-pagination__link" rel="next">
                 <span class="gem-c-pagination__link-title">
                   <svg class="gem-c-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
                     <path d="m10.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"></path>
@@ -177,7 +177,7 @@
                   </span>
                 </span>
                   <span class="gem-c-pagination__link-divider visually-hidden">:</span>
-                  <span class="gem-c-pagination__link-label">Your appeal statement</span>
+                  <span class="gem-c-pagination__link-label">The stages of an appeal</span>
               </a>
             </li>
 
@@ -209,7 +209,7 @@
         </div>
       </div>
     </div>
-    
+
   </main>
 </div>
 
