--- a/app/views/guidance/full/v2/your-appeal-statement.html
+++ b/app/views/guidance/full/v2/your-appeal-statement.html
@@ -36,13 +36,13 @@
                 <a class="gem-c-contents-list__link govuk-link" href="when-you-can-appeal"> When you can appeal</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                <a class="gem-c-contents-list__link govuk-link" href="before-you--appeal"> Before you appeal</a>
-              </li>
-              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                <a class="gem-c-contents-list__link govuk-link" href="submit-an-appeal">Submit an appeal</a>
+                <a class="gem-c-contents-list__link govuk-link" href="before-you-appeal"> Before you appeal</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active govuk-body-s govuk-!-margin-bottom-0" aria-current="true">
                 Your appeal statement
+              </li>
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+                <a class="gem-c-contents-list__link govuk-link" href="submit-an-appeal">Submit an appeal</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="stages-of-an-appeal">The stages of an appeal</a>
@@ -78,7 +78,7 @@
           You should prepare your statement in a document to upload with your appeal.
         </p>
 
-        <h3 class="govuk-heading-s">
+        <h3 class="govuk-heading-m">
           If you’re appealing a refusal
         </h3>
 
@@ -98,7 +98,7 @@
           For your appeal to be successful, the Planning Inspectorate must agree that all the reasons for refusal are incorrect.
         </p>
 
-        <h3 class="govuk-heading-s">
+        <h3 class="govuk-heading-m">
           If you’re appealing conditions
         </h3>
 
@@ -119,7 +119,7 @@
           If you’re asking for the conditions to be changed, instead of removed, you should say what you want them to be changed to.
         </p>
 
-        <h3 class="govuk-heading-s">
+        <h3 class="govuk-heading-m">
           If you’re appealing a late planning decision
         </h3>
 
@@ -131,7 +131,7 @@
           You should focus on the parts of your application that your local planning department is likely to disagree with, if you know what these are.
         </p>
 
-        <h3 class="govuk-heading-s">
+        <h3 class="govuk-heading-m">
           Respond to comments from interested parties
         </h3>
 
@@ -139,7 +139,7 @@
           You can include responses to comments from interested parties in your appeal statement. You only need to do this if they relate to reasons for appealing.
         </p>
 
-        <h3 class="govuk-heading-s">
+        <h3 class="govuk-heading-m">
           Supporting documents
         </h3>
 
@@ -151,7 +151,7 @@
           If you mention supporting documents in your statement, you must submit them with your appeal. If you do not, it will delay your appeal and you might miss your deadline.
         </p>
 
-        <h3 class="govuk-heading-s">
+        <h3 class="govuk-heading-m">
           Sensitive information
         </h3>
 
@@ -176,7 +176,7 @@
           <ul class="gem-c-pagination__list" data-module="track-click">
 
             <li class="gem-c-pagination__item gem-c-pagination__item--previous">
-              <a href="submit-an-appeal" class="gem-c-pagination__link" rel="prev">
+              <a href="before-you-appeal" class="gem-c-pagination__link" rel="prev">
                 <span class="gem-c-pagination__link-title">
                   <svg class="gem-c-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
                     <path d="m6.5938-0.0078125-6.7266 6.7266 6.7441 6.4062 1.377-1.449-4.1856-3.9768h12.896v-2h-12.984l4.2931-4.293-1.414-1.414z"></path>
@@ -186,11 +186,11 @@
                   </span>
                 </span>
                   <span class="gem-c-pagination__link-divider visually-hidden">:</span>
-                  <span class="gem-c-pagination__link-label">Submit an appeal</span>
+                  <span class="gem-c-pagination__link-label">Before you appeal</span>
               </a>
             </li>
             <li class="gem-c-pagination__item gem-c-pagination__item--next">
-              <a href="stages-of-an-appeal" class="gem-c-pagination__link" rel="next">
+              <a href="submit-an-appeal" class="gem-c-pagination__link" rel="next">
                 <span class="gem-c-pagination__link-title">
                   <svg class="gem-c-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
                     <path d="m10.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"></path>
@@ -200,7 +200,7 @@
                   </span>
                 </span>
                   <span class="gem-c-pagination__link-divider visually-hidden">:</span>
-                  <span class="gem-c-pagination__link-label">The stages of an appeal</span>
+                  <span class="gem-c-pagination__link-label">Submit an appeal</span>
               </a>
             </li>
 
