--- a/app/views/index.html
+++ b/app/views/index.html
@@ -176,6 +176,9 @@ service-start{% extends "layout.html" %}
                     </p>
                     <ul class="govuk-list govuk-list--bullet">
                       <li>
+                        <a href="before-you-start/v10/?saveDemo=1">Start 'Before you start' (UR link between BYS and Save and return)</a>
+                      </li>
+                      <li>
                         <a href="/before-you-start/v10/">Start 'Before you start'</a>
                       </li>
                     </ul>
