--- a/app/views/guidance/full/v2/stages-of-an-appeal.html
+++ b/app/views/guidance/full/v2/stages-of-an-appeal.html
@@ -36,13 +36,13 @@
                 <a class="gem-c-contents-list__link govuk-link" href="when-you-can-appeal"> When you can appeal</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                <a class="gem-c-contents-list__link govuk-link" href="before-you--appeal"> Before you appeal</a>
-              </li>
-              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-                <a class="gem-c-contents-list__link govuk-link" href="submit-an-appeal">Submit an appeal</a>
+                <a class="gem-c-contents-list__link govuk-link" href="before-you-appeal"> Before you appeal</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
                 <a class="gem-c-contents-list__link govuk-link" href="your-appeal-statement">Your appeal statement</a>
+              </li>
+              <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+                <a class="gem-c-contents-list__link govuk-link" href="submit-an-appeal">Submit an appeal</a>
               </li>
               <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed gem-c-contents-list__list-item--active govuk-body-s govuk-!-margin-bottom-0" aria-current="true">The stages of an appeal
               </li>
@@ -174,7 +174,7 @@
           <ul class="gem-c-pagination__list" data-module="track-click">
 
             <li class="gem-c-pagination__item gem-c-pagination__item--previous">
-              <a href="your-appeal-statement" class="gem-c-pagination__link" rel="prev">
+              <a href="submit-an-appeal" class="gem-c-pagination__link" rel="prev">
                 <span class="gem-c-pagination__link-title">
                   <svg class="gem-c-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
                     <path d="m6.5938-0.0078125-6.7266 6.7266 6.7441 6.4062 1.377-1.449-4.1856-3.9768h12.896v-2h-12.984l4.2931-4.293-1.414-1.414z"></path>
@@ -184,7 +184,7 @@
                   </span>
                 </span>
                   <span class="gem-c-pagination__link-divider visually-hidden">:</span>
-                  <span class="gem-c-pagination__link-label">Your appeal statement</span>
+                  <span class="gem-c-pagination__link-label">Submit an appeal</span>
               </a>
             </li>
             <li class="gem-c-pagination__item gem-c-pagination__item--next">
