--- a/app/views/index.html
+++ b/app/views/index.html
@@ -519,8 +519,8 @@ service-start{% extends "layout.html" %}
                   <div class="govuk-inset-text govuk-!-margin-top-0">
 
                     {{ govukTag({
-                      classes: "govuk-tag--green govuk-!-margin-bottom-3",
-                      text: "Ready for UR"
+                      classes: "govuk-tag--blue govuk-!-margin-bottom-3",
+                      text: "Done"
                     }) }}
 
                     <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
@@ -639,6 +639,19 @@ service-start{% extends "layout.html" %}
                       </li>
 
                     </ul>
+
+                    <details class="govuk-details" data-module="govuk-details">
+                      <summary class="govuk-details__summary">
+                        <span class="govuk-details__summary-text">
+                          User research
+                        </span>
+                      </summary>
+                      <div class="govuk-details__text">
+                        <ul class="govuk-list govuk-list-bulleted">
+                          <li><a href="https://pins-ds.atlassian.net/wiki/spaces/AAPDS/pages/963608577/UR_Greece+Sprint+-+Team+2" target="_blank">Confluence sprint 13 user research</a></li>
+                        </ul>
+                      </div>
+                    </details>
 
                     <details class="govuk-details" data-module="govuk-details">
                       <summary class="govuk-details__summary">
