--- a/app/views/save-progress/v3/appeal-saved.html
+++ b/app/views/save-progress/v3/appeal-saved.html
@@ -64,13 +64,12 @@
 
   </div>
 
-  <!-- this is a prototype only link -->
-  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-9">
-  </div>
 
-  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-0">
+  <!-- only for user research purposes -->
+  <!-- this is a prototype only link -->
+  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-0 govuk-!-margin-top-9">
     <p class="govuk-body-s">
-      <a href="inbox-2">
+      <a href="inbox-2" class="pins-prototype-only">
         Go to the email (your inbox)
       </a>
     </p>
