--- a/app/views/save-progress/v3/task-list.html
+++ b/app/views/save-progress/v3/task-list.html
@@ -1,4 +1,12 @@
-{% extends "layouts/save-progress/v2.html" %}
+{% if data['progress'] == 'yes' %}
+
+  {% extends "layouts/save-progress/v2-no-back.html" %}
+
+{% else %}
+
+  {% extends "layouts/save-progress/v2.html" %}
+
+{% endif %}
 
 {% block pageTitle %}
   Task list - Appeal a planning decision for application number 1234567 - {{serviceName}} - GOV.UK
@@ -19,9 +27,13 @@
       <!-- Count completed tasks -->
 
       {% set taskcount = 0 %}
+
       {% if data["contactdetails-"+version+"-taskliststatus-contactdetails"] == "Complete" %}
         {% set taskcount = taskcount + 1 %}
+      {% elseif data['progress'] == 'yes' %}
+        {% set taskcount = taskcount + 1 %}
       {% endif %}
+
       {% if data["contactdetails-"+version+"-taskliststatus-appealsite"] == "Complete" %}
         {% set taskcount = taskcount + 1 %}
       {% endif %}
