--- a/app/views/save-progress/v3/confirm-email-resent.html
+++ b/app/views/save-progress/v3/confirm-email-resent.html
@@ -17,10 +17,6 @@
     html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
   }) }}
 
-  {{ govukBackLink({
-    text: "Back",
-    href: "javascript:history.go(-1);"
-  }) }}
 {% endblock %}
 
 {% block content %}
@@ -73,13 +69,12 @@
     </div>
   </div>
 
-  <!-- this is a prototype only link -->
-  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-9">
-  </div>
 
-  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-0">
+  <!-- only for user research purposes -->
+  <!-- this is a prototype only link -->
+  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-0 govuk-!-margin-top-9">
     <p class="govuk-body-s">
-      <a href="confirmation-email">
+      <a href="confirmation-email" class="pins-prototype-only">
         Go to the email (your inbox)
       </a>
     </p>
