--- a/app/views/save-progress/v3/email-confirmed.html
+++ b/app/views/save-progress/v3/email-confirmed.html
@@ -17,10 +17,6 @@
     html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
   }) }}
 
-  {{ govukBackLink({
-    text: "Back",
-    href: "javascript:history.go(-1);"
-  }) }}
 {% endblock %}
 
 {% block content %}
@@ -62,14 +58,12 @@
     </div>
   </div>
 
-
+  <!-- only for user research purposes -->
   <!-- this is a prototype only link -->
-  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-9">
-  </div>
 
-  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-0">
+  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-0 govuk-!-margin-top-9">
     <p class="govuk-body-s">
-      <a href="expired-link">
+      <a href="expired-link" class="pins-prototype-only">
         Link expired version
       </a>
     </p>
