Addition of link to "Comment on a planning appeal" guidance

--- a/app/views/guidance/full/v2/comment-on-planning-appeal.html
+++ b/app/views/guidance/full/v2/comment-on-planning-appeal.html
@@ -78,11 +78,11 @@
         </h2>
 
         <p class="govuk-body">
-          To submit your comments, find the appeal online.
+          To submit your comments, <a href="#" class="govuk-link">find the appeal online</a>.
         </p>
 
         <p class="govuk-body">
-          If you cannot use the online service, you can submit your comments to the Planning Inspectorate’s customer support team:
+          If you cannot use the online service, you can submit your comments to the Planning Inspectorate's customer support team:
         </p>
 
         <p class="govuk-body">
@@ -118,7 +118,7 @@
             5 weeks after the start date of the appeal
           </li>
           <li>
-            6 weeks after the date on the local planning department’s enforcement notice
+            6 weeks after the date on the local planning department's enforcement notice
           </li>
         </ul>
 
