--- a/app/views/save-progress/v3/confirm-email.html
+++ b/app/views/save-progress/v3/confirm-email.html
@@ -78,12 +78,10 @@
     </div>
   </div>
 
-  <!-- this is a prototype only link -->
-  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-9">
-  </div>
 
-  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-0">
-    <p class="govuk-body-s">
+  <!-- this is a prototype only link -->
+  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-9 govuk-!-margin-top-9">
+    <p class="govuk-body-s pins-prototype-only">
       <a href="inbox-1">
         Go to the email (your inbox)
       </a>
