--- a/app/assets/sass/pins/save-return.scss
+++ b/app/assets/sass/pins/save-return.scss
@@ -18,3 +18,16 @@
   margin-bottom: 50px;
   margin-top: 0;
 }
+
+.pins-prototype-only,
+.pins-prototype-only a:visited,
+.pins-prototype-only a:link,
+.pins-prototype-only a:active,
+.pins-prototype-only a:focus {
+  background-color: #efefef;
+  color: darkorange !important;
+  padding: 1rem;
+  position: relative;
+  left: -1rem;
+  box-shadow: none;
+}
