--- a/app/views/save-progress/v3/appeal-saved.html
+++ b/app/views/save-progress/v3/appeal-saved.html
@@ -56,20 +56,18 @@
       </a>.
     </p> -->
 
-    <p class="govuk-body">
+    <!-- <p class="govuk-body">
       You can <a href="incomplete-appeals" class="govuk-link">
         continue with another appeal
       </a>.
-    </p>
+    </p> -->
 
   </div>
+
 
   <!-- this is a prototype only link -->
-  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-9">
-  </div>
-
-  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-0">
-    <p class="govuk-body-s">
+  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-9 govuk-!-margin-top-9">
+    <p class="govuk-body-s pins-prototype-only">
       <a href="inbox-2">
         Go to the email (your inbox)
       </a>
