--- a/app/views/save-progress/v3/confirm-email-resent.html
+++ b/app/views/save-progress/v3/confirm-email-resent.html
@@ -74,11 +74,8 @@
   </div>
 
   <!-- this is a prototype only link -->
-  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-9">
-  </div>
-
-  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-0">
-    <p class="govuk-body-s">
+  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-9 govuk-!-margin-top-9">
+    <p class="govuk-body-s pins-prototype-only">
       <a href="confirmation-email">
         Go to the email (your inbox)
       </a>
