--- a/app/views/save-progress/v3/expired-link.html
+++ b/app/views/save-progress/v3/expired-link.html
@@ -49,13 +49,9 @@
     </div>
   </div>
 
-
   <!-- this is a prototype only link -->
-  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-9">
-  </div>
-
-  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-0">
-    <p class="govuk-body-s">
+  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-9 govuk-!-margin-top-9">
+    <p class="govuk-body-s pins-prototype-only">
       <a href="email-confirmed">
         Link valid version
       </a>
