--- a/app/views/save-progress/v3/magic-link-email-sent.html
+++ b/app/views/save-progress/v3/magic-link-email-sent.html
@@ -54,7 +54,7 @@
       </p>
 
       <p class="govuk-body">
-        We can <a href="magic-link-email-resent">resend the email</a>.
+        We can <a href="confirm-email-resent">resend the email</a>.
       </p>
 
       <p class="govuk-body">
@@ -78,11 +78,10 @@
     </div>
   </div>
 
-  <!-- only for user research purposes -->
   <!-- this is a prototype only link -->
-  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-0 govuk-!-margin-top-9">
-    <p class="govuk-body-s">
-      <a href="inbox-3" class="pins-prototype-only">
+  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-9 govuk-!-margin-top-9">
+    <p class="govuk-body-s pins-prototype-only">
+      <a href="inbox-3">
         Go to the email (your inbox)
       </a>
     </p>
