--- a/app/views/save-progress/v3/what-is-your-application-number.html
+++ b/app/views/save-progress/v3/what-is-your-application-number.html
@@ -43,7 +43,7 @@
           </div>
 
           <div class="govuk-form-group">
-            <input class="govuk-input govuk-input--width-10" id="applicationNumber" name="applicationNumber" spellcheck="false" autocomplete="false" value="{{ data['applicationNumber'] }}">
+            <input class="govuk-input govuk-input--width-10" id="applicationNumber" name="applicationNumber" type="number" spellcheck="false" autocomplete="false" value="{{ data['applicationNumber'] }}">
           </div>
 
         </div>
