--- a/app/views/index.html
+++ b/app/views/index.html
@@ -519,6 +519,11 @@ service-start{% extends "layout.html" %}
                   <div class="govuk-inset-text govuk-!-margin-top-0">
 
                     {{ govukTag({
+                      classes: "govuk-tag--purple govuk-!-margin-bottom-3",
+                      text: "Ready for dev"
+                    }) }}
+
+                    {{ govukTag({
                       classes: "govuk-tag--blue govuk-!-margin-bottom-3",
                       text: "Done"
                     }) }}
@@ -621,22 +626,22 @@ service-start{% extends "layout.html" %}
                           Subject: Return to appeal a planning decision
                         </a>
                       </li>
-                      <li>
+                      <!-- <li>
                         <a href="/save-progress/v3/incomplete-appeals">
                           Incomplete appeals
                         </a>
-                      </li>
+                      </li> -->
                       <li>
                         <a href="/save-progress/v3/return-email">
                           Return email
                         </a>
                       </li>
-                      <br>
+                      <!-- <br>
                       <li>
                         <a href="/save-progress/v3/service-start">
                           Service start
                         </a>
-                      </li>
+                      </li> -->
 
                     </ul>
 
