--- a/app/views/save-progress/v3/appeal-saved.html
+++ b/app/views/save-progress/v3/appeal-saved.html
@@ -56,20 +56,19 @@
       </a>.
     </p> -->
 
-    <p class="govuk-body">
+    <!-- <p class="govuk-body">
       You can <a href="incomplete-appeals" class="govuk-link">
         continue with another appeal
       </a>.
-    </p>
+    </p> -->
 
   </div>
 
 
-  <!-- only for user research purposes -->
   <!-- this is a prototype only link -->
-  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-0 govuk-!-margin-top-9">
-    <p class="govuk-body-s">
-      <a href="inbox-2" class="pins-prototype-only">
+  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-9 govuk-!-margin-top-9">
+    <p class="govuk-body-s pins-prototype-only">
+      <a href="inbox-2">
         Go to the email (your inbox)
       </a>
     </p>
