--- a/app/views/save-progress/v3/before-you-continue.html
+++ b/app/views/save-progress/v3/before-you-continue.html
@@ -17,6 +17,10 @@
     html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
   }) }}
 
+  {{ govukBackLink({
+    text: "Back",
+    href: "javascript:history.go(-1);"
+  }) }}
 {% endblock %}
 
 {% block content %}
