--- a/app/views/save-progress/v3/expired-link.html
+++ b/app/views/save-progress/v3/expired-link.html
@@ -17,6 +17,10 @@
     html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
   }) }}
 
+  {{ govukBackLink({
+    text: "Back",
+    href: "javascript:history.go(-1);"
+  }) }}
 {% endblock %}
 
 {% block content %}
@@ -45,12 +49,10 @@
     </div>
   </div>
 
-  <!-- only for user research purposes -->
   <!-- this is a prototype only link -->
-
-  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-0 govuk-!-margin-top-9">
-    <p class="govuk-body-s">
-      <a href="email-confirmed" class="pins-prototype-only">
+  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-9 govuk-!-margin-top-9">
+    <p class="govuk-body-s pins-prototype-only">
+      <a href="email-confirmed">
         Link valid version
       </a>
     </p>
