--- a/app/views/save-progress/v3/magic-link-email.html
+++ b/app/views/save-progress/v3/magic-link-email.html
@@ -38,7 +38,7 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
       {% if data['savedOn'] == 'start' %}
         <a href="before-you-continue">www.gov.uk/appeal-a-planning-decision/appeals?session=679aa0</a>
       {% elseif data['savedOn'] == 'task' %}
-        <a href="task-list?progress=yes">www.gov.uk/appeal-a-planning-decision/appeals?session=679aa0</a>
+        <a href="task-list">www.gov.uk/appeal-a-planning-decision/appeals?session=679aa0</a>
       {% else %}
           <a href="incomplete-appeals">www.gov.uk/appeal-a-planning-decision/appeals?session=321fa2</a>
       {% endif %}
