--- a/app/views/save-progress/v3/magic-link-email.html
+++ b/app/views/save-progress/v3/magic-link-email.html
@@ -40,7 +40,7 @@ Dear [IP NAME]Site detailsSite Address:[INSERT HERE]Description of development:[
       {% elseif data['savedOn'] == 'task' %}
         <a href="task-list">www.gov.uk/appeal-a-planning-decision/appeals?session=679aa0</a>
       {% else %}
-          <a href="incomplete-appeals">www.gov.uk/appeal-a-planning-decision/appeals?session=321fa2</a>
+        <a href="task-list">www.gov.uk/appeal-a-planning-decision/appeals?session=679aa0</a>
       {% endif %}
     </p>
 
